# personal-blog

./: .dockerignore  .gitignore  COPYING  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
app/blog/: admin.py  models.py  sitemaps.py  urls.py  utils.py  views.py
app/blog/migrations/: 0001_initial.py  0002_category_post_category.py  0003_tag_post_tag.py
app/blog/static/blog/css/: dark.css  fonts.css  jetbrains-mono.css  main.css
app/blog/static/blog/js/: themetoggle.js
app/blog/templates/: robots.txt
app/blog/templates/blog/: base.html  post_list.html  single.html  static.html
app/blog/templates/blog/errors/: error_page.html
app/blog/templates/blog/include/: footer.html  head.html  header.html  paginator.html
app/blog/templatetags/: markdown_extras.py
app/core/: settings.py  urls.py
app/env/: .env.dev.example
docker/nginx/dev/: django.conf
