[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anton Savenchuk <Anton.Savenchuk@gmail.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-environ = "^0.11.2"
pillow = "^10.3.0"
django-debug-toolbar = "^4.3.0"
markdown = "^3.5.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
